bumped up MaxPermGen since the new JRebel 3.7-SNAPSHOT blows out the top